src/routes/styles.css
@import '@fontsource/fira-mono';
@import '@fontsource/noto-sans';
@import '@fontsource/noto-sans/700.css';

:root {
	--font-body: 'Noto Sans', 'Open Sans', Arial, -apple-system,
		BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
		'Open Sans', 'Helvetica Neue', sans-serif;
	--font-mono: 'Fira Mono', monospace;
	--color-bg: #21382f;
	--color-fg: #ffdb3b;
	--color-user: var(--color-fg); /* Overridden in app */
	font-family: var(--font-body);
	color: var(--color-fg);
}

body {
	min-height: 100vh;
	margin: 0;
	background-color: var(--color-bg);
}

h1,
h2,
p {
	font-weight: 400;
}

p {
	line-height: 1.5;
}

a {
	color: var(--color-fg);
	text-decoration: underline;
	text-decoration-style: dotted;
}

a:hover {
	text-decoration: underline;
}

h1 {
	font-size: 2rem;
	text-align: center;
}

h2 {
	font-size: 1rem;
}

input,
button {
	font-size: inherit;
	font-family: inherit;
}

textarea {
	font-family: var(--font-mono);
}

button {
	background: var(--color-bg);
	color: var(--color-fg);
	box-shadow: 0 0 0 1px var(--color-fg);
	border-radius: 0.5rem;
	padding: 0.375rem 0.75rem;
	border: none;
	cursor: pointer;
	transition: background-color 80ms ease-out, color 80ms ease-out;
}

button:hover {
	color: var(--color-bg);
	background: var(--color-fg);
	transition: none;
}

button:focus:not(:focus-visible) {
	outline: none;
}

